--- a/package.json
+++ b/package.json
@@ -6,19 +6,28 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css}'"
   },
   "dependencies": {
+    "@fontsource/comfortaa": "4.5.9",
+    "@rainbow-me/rainbowkit": "0.5.1",
+    "ethers": "5.7.0",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "0.6.5"
   },
   "devDependencies": {
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "10.4.8",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
+    "postcss": "8.4.16",
+    "prettier": "2.7.1",
+    "tailwindcss": "3.1.8",
     "typescript": "4.8.3"
   }
 }
