--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "format": "prettier --write './**/*.{js,jsx,ts,tsx,css}'"
   },
   "dependencies": {
-    "@fontsource/comfortaa": "4.5.9",
+    "@fontsource/varela-round": "4.5.9",
     "@rainbow-me/rainbowkit": "0.5.1",
     "ethers": "5.7.0",
+    "graphql": "16.6.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "urql": "3.0.3",
     "wagmi": "0.6.5"
   },
   "devDependencies": {
